# libkansai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  ubuntu.yml  windows.yml
include/: kansai-aabounding.h  kansai-color.h  kansai-context.h  kansai-random.h  kansai-utilities.h  kansai-version.h
sketches/: multiple-windows.c  noise.c  square.c  viewer.c
source/: aabounding.c  color.c  context-agnostic.c  context-private.h  context-sdl2.c  random.c  utilities.c  version.c
source/context/: context.c  objects.c  private.h  sdl2.c  state.c  update.c  window.c
source/context/glad/: glad.c
